# web

./: .gitignore  Dockerfile  bun.lockb  db.sqlite3  docker-compose.yaml  entrypoint.sh  manage.py  package.json  pyproject.toml  tailwind.config.js
cart/: admin.py  forms.py  models.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_image_keranjang_image.py  0003_delete_image_alter_keranjang_image.py
cart/static/cart/: style.css
cart/templates/cart/: daftar_keranjang.html  edit_keranjang.html  halaman_baru.html  halaman_efan.html  hapus_keranjang.html  movie_detail.html  tambah_keranjang.html
shoppinglist/: asgi.py  settings.py  urls.py  wsgi.py
