[project]
name = "web"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "efran", email = "efransarunisatu@gmail.com" }
]
dependencies = [
    "django==5.1.1",
    "psycopg2-binary==2.9.9",
    "requests==2.32.3",
    "pillow>=10.4.0",
    "django-environ>=0.12.0",
    "granian>=1.7.6",
    "boto3>=1.36.16",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/web"]
